tests/trybuild/registry/comma_alone.rs
use brood::registry;

type Registry = registry!(,);

fn main() {}
